--- a/conventions-vclib/src/main/resources/vcLibVersions.properties
+++ b/conventions-vclib/src/main/resources/vcLibVersions.properties
@@ -1,6 +1,7 @@
-kmpCrypto=3.2.1
+kmpCrypto=3.5.0
 uuid=0.8.1
-jsonpath=2.0.0
+jsonpath=2.1.0
 jvm.json=20230618
+jvm.cbor=1.18
 eupid=2.1.1
 mdl=1.0.0
